--- a/labs/lab1/hw0.ipynb
+++ b/labs/lab1/hw0.ipynb
@@ -292,22 +292,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.7.9 (default, Dec 10 2014, 12:24:55) [MSC v.1500 32 bit (Intel)]\n"
+      "3.6.5 (v3.6.5:f59c0932b4, Mar 28 2018, 05:52:31) \n",
+      "[GCC 4.2.1 Compatible Apple LLVM 6.0 (clang-600.0.57)]\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
-    "print sys.version"
+    "print(sys.version)"
    ]
   },
   {
@@ -710,7 +714,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -780,23 +787,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "IPython version:       3.2.0 (need at least 3.0.0)\n",
-      "Numpy version:        1.10.0 (need at least 1.9.1)\n",
-      "SciPy version:        0.16.0 (need at least 0.15.1)\n",
-      "Pandas version:       0.16.2 (need at least 0.16.2)\n",
-      "Mapltolib version:     1.4.2 (need at least 1.4.1)\n",
-      "Scikit-Learn version: 0.16.1 (need at least 0.16.1)\n",
-      "requests version:      2.7.0 (need at least 2.0.0)\n",
-      "BeautifulSoup version: 4.4.0 (need at least 4.4)\n",
+      "IPython version:      7.11.1 (need at least 3.0.0)\n",
+      "Numpy version:        1.18.1 (need at least 1.9.1)\n",
+      "SciPy version:         1.4.1 (need at least 0.15.1)\n",
+      "Pandas version:       0.25.3 (need at least 0.16.2)\n",
+      "Mapltolib version:     3.1.2 (need at least 1.4.1)\n",
+      "Scikit-Learn version: 0.22.1 (need at least 0.16.1)\n",
+      "requests version:     2.22.0 (need at least 2.0.0)\n",
+      "BeautifulSoup version: 4.8.2 (need at least 4.4)\n",
       "Loaded PyQuery\n"
      ]
     }
@@ -804,38 +814,38 @@
    "source": [
     "#IPython is what you are using now to run the notebook\n",
     "import IPython\n",
-    "print \"IPython version:      %6.6s (need at least 3.0.0)\" % IPython.__version__\n",
+    "print(\"IPython version:      %6.6s (need at least 3.0.0)\" % IPython.__version__)\n",
     "\n",
     "# Numpy is a library for working with Arrays\n",
     "import numpy as np\n",
-    "print \"Numpy version:        %6.6s (need at least 1.9.1)\" % np.__version__\n",
+    "print(\"Numpy version:        %6.6s (need at least 1.9.1)\" % np.__version__)\n",
     "\n",
     "# SciPy implements many different numerical algorithms\n",
     "import scipy as sp\n",
-    "print \"SciPy version:        %6.6s (need at least 0.15.1)\" % sp.__version__\n",
+    "print(\"SciPy version:        %6.6s (need at least 0.15.1)\" % sp.__version__)\n",
     "\n",
     "# Pandas makes working with data tables easier\n",
     "import pandas as pd\n",
-    "print \"Pandas version:       %6.6s (need at least 0.16.2)\" % pd.__version__\n",
+    "print(\"Pandas version:       %6.6s (need at least 0.16.2)\" % pd.__version__)\n",
     "\n",
     "# Module for plotting\n",
     "import matplotlib\n",
-    "print \"Mapltolib version:    %6.6s (need at least 1.4.1)\" % matplotlib.__version__\n",
+    "print(\"Mapltolib version:    %6.6s (need at least 1.4.1)\" % matplotlib.__version__)\n",
     "\n",
     "# SciKit Learn implements several Machine Learning algorithms\n",
     "import sklearn\n",
-    "print \"Scikit-Learn version: %6.6s (need at least 0.16.1)\" % sklearn.__version__\n",
+    "print(\"Scikit-Learn version: %6.6s (need at least 0.16.1)\" % sklearn.__version__)\n",
     "\n",
     "# Requests is a library for getting data from the Web\n",
     "import requests\n",
-    "print \"requests version:     %6.6s (need at least 2.0.0)\" % requests.__version__\n",
+    "print(\"requests version:     %6.6s (need at least 2.0.0)\" % requests.__version__)\n",
     "\n",
     "#BeautifulSoup is a library to parse HTML and XML documents\n",
     "import bs4\n",
-    "print \"BeautifulSoup version:%6.6s (need at least 4.4)\" % bs4.__version__\n",
+    "print(\"BeautifulSoup version:%6.6s (need at least 4.4)\" % bs4.__version__)\n",
     "\n",
     "import pyquery\n",
-    "print \"Loaded PyQuery\""
+    "print(\"Loaded PyQuery\")"
    ]
   },
   {
@@ -877,7 +887,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -921,7 +934,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -981,7 +997,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1046,7 +1065,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1076,7 +1098,10 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1102,7 +1127,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1129,7 +1157,10 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1165,7 +1196,10 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1207,7 +1241,10 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1251,7 +1288,10 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1294,7 +1334,10 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1349,7 +1392,10 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1400,7 +1446,10 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -1444,7 +1493,10 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [
     {
@@ -1486,9 +1538,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "source": [
     "##The workflow for homeworks and labs"
    ]
@@ -1590,23 +1640,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
